# Shelfino_ROS2

./: notes.txt  run_docker.sh
evader/src/: evader.cpp
map_pkg/config/: map_config.yaml
map_pkg/config/demos/victims/: victims1.yaml
projects/: CMakeLists.txt  package.xml
projects/include/target_rescue/: dubins_planner.hpp  map_generator.hpp  roadmap_builder.hpp  target_rescue_node.hpp
projects/launch/: evacuation.launch.py  victims.launch.py
projects/src/: dubins_planner.cpp  main.cpp  map_generator.cpp  roadmap_builder.cpp  target_rescue_node.cpp
projects/test/: test_dubins_planner.cpp
shelfino_navigation/config/: shelfino.yaml
